<sys/types.h>: Get rid of udev_t.
In a time long long ago, dev_t was a pointer, which later became cdev_t
during the great cleanups, until it ended up being a uint32_t, just like
udev_t. See for example the definitions of __dev_t in <sys/stat.h>.

This commit cleans up further by removing the udev_t type, leaving just
the POSIX dev_t type for both kernel and userland. Put it inside a
_DEV_T_DECLARED to prepare for further cleanups in <sys/stat.h>.

--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -28,7 +28,7 @@
 .\"	From: @(#)sysctl.8	8.1 (Berkeley) 6/6/93
 .\" $FreeBSD: src/sbin/sysctl/sysctl.8,v 1.23.2.17 2003/05/19 07:49:34 brueffer Exp $
 .\"
-.Dd October 18, 2019
+.Dd December 1, 2019
 .Dt SYSCTL 8
 .Os
 .Sh NAME
@@ -124,7 +124,7 @@ few bytes.
 The information available from
 .Nm
 consists of integers, strings, devices
-.Pq Vt udev_t ,
+.Pq Vt dev_t ,
 and opaque types.
 The
 .Nm
@@ -193,7 +193,7 @@ denote
 .It "kern.osreldate	string	no"
 .It "kern.bootfile	string	yes"
 .It "kern.corefile	string	yes"
-.It "kern.dumpdev	udev_t	yes"
+.It "kern.dumpdev	dev_t	yes"
 .It "kern.logsigexit	integer	yes"
 .It "vm.loadavg	struct	no"
 .It "hw.machine	string	no"
@@ -206,7 +206,7 @@ denote
 .It "hw.floatingpoint	integer	no"
 .It "hw.machine_arch	string	no"
 .It "hw.sensors.<xname>.<type><numt>	struct	no"
-.It "machdep.console_device	udev_t	no"
+.It "machdep.console_device	dev_t	no"
 .It "machdep.adjkerntz	integer	yes"
 .It "machdep.disable_rtc_set	integer	yes"
 .It "user.cs_path	string	no"
