--- a/share/man/man9/sysctl.9
+++ b/share/man/man9/sysctl.9
@@ -23,12 +23,13 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD: src/share/man/man9/sysctl.9,v 1.3 2006/04/28 23:21:36 keramida Exp $
 .\"
-.Dd October 6, 2018
+.Dd December 2, 2019
 .Dt SYSCTL 9
 .Os
 .Sh NAME
+.Nm SYSCTL_BIT32 ,
+.Nm SYSCTL BIT64 ,
 .Nm SYSCTL_DECL ,
 .Nm SYSCTL_INT ,
 .Nm SYSCTL_LONG ,
@@ -53,6 +54,26 @@
 .Sh SYNOPSIS
 .In sys/types.h
 .In sys/sysctl.h
+.Fo SYSCTL_BIT32
+.Fa "parent"
+.Fa "nbr"
+.Fa "name"
+.Fa "access"
+.Fa "ptr"
+.Fa "val"
+.Fa "bit"
+.Fa "descr"
+.Fc
+.Fo SYSCTL_BIT64
+.Fa "parent"
+.Fa "nbr"
+.Fa "name"
+.Fa "access"
+.Fa "ptr"
+.Fa "val"
+.Fa "bit"
+.Fa "descr"
+.Fc
 .Fo SYSCTL_DECL
 .Fa "name"
 .Fc
@@ -245,6 +266,8 @@ node must be declared in the current context using
 .Fn SYSCTL_DECL .
 .Pp
 New nodes are declared using one of
+.Nm SYSCTL_BIT32 ,
+.Nm SYSCTL_BIT64 ,
 .Nm SYSCTL_INT ,
 .Nm SYSCTL_LONG ,
 .Nm SYSCTL_QUAD ,
