sort.1: Mention that -o's argument can be one of the input files.

--- a/usr.bin/sort/sort.1
+++ b/usr.bin/sort/sort.1
@@ -33,7 +33,7 @@
 .\"
 .\"     @(#)sort.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd March 19, 2015
+.Dd December 2, 2019
 .Dt SORT 1
 .Os
 .Sh NAME
@@ -97,6 +97,7 @@ If they are not sorted the output order is undefined.
 Print the output to the
 .Ar output
 file instead of the standard output.
+This file can be the same as one of the input files.
 .It Fl S Ar size , Fl Fl buffer-size Ns = Ns Ar size
 Use
 .Ar size
