--- a/sbin/mount_devfs/mount_devfs.8
+++ b/sbin/mount_devfs/mount_devfs.8
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 17, 2009
+.Dd December 4, 2019
 .Dt MOUNT_DEVFS 8
 .Os
 .Sh NAME
@@ -100,7 +100,7 @@ A corresponding
 .Xr fstab 5
 entry is:
 .Bd -literal -offset indent
-devfs /var/jail/dev devfs jail,ruleset=default.rules
+devfs /var/jail/dev devfs ro,jail,ruleset=default.rules
 .Ed
 .Sh SEE ALSO
 .Xr mount 2 ,
