docs - Add note about powerd and serial port operation
* Serial port operation at high baud rates such as 115200 may
  lose characters if powerd is allowed to reduce the CPU
  frequency below 1500 MHz.

* Document this fact and include a suggestion for powerd_flags
  if this is not desired.

--- a/share/man/man5/rc.conf.5
+++ b/share/man/man5/rc.conf.5
@@ -180,6 +180,10 @@ Empty by default.
 Additional flags passed to the
 .Xr powerd 8
 program.
+.Pp
+If you are running a serial port at 115200 baud we recommend setting
+the flags to "-l 1500" as lower frequencies will cause characters to
+drop.
 .It Va sensorsd_enable
 .Pq Vt bool
 Set to
