Remove mrouted(8) and the associated utilities from our tree.
Our version was old and unmaintained. A newer version can be found in
dports, if anyone still needs it, but it likely is used only rarely,
if at all.

--- a/share/man/man4/ip6.4
+++ b/share/man/man4/ip6.4
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd May 20, 2018
+.Dd December 31, 2019
 .Dt IP6 4
 .Os
 .Sh NAME
@@ -178,7 +178,7 @@ the destination group and if multicast loopback (see below) has not been
 disabled on the sending socket.
 Multicast datagrams with a hop limit greater than 1 may be forwarded to
 the other networks if a multicast router (such as
-.Xr mrouted 8 )
+.Xr mrouted 8 Pq Pa net/mrouted )
 is attached to the local network.
 .It Dv IPV6_MULTICAST_LOOP Fa "u_int *"
 Get or set the status of whether multicast datagrams will be looped back
