--- a/sbin/newbtconf/newbtconf.8
+++ b/sbin/newbtconf/newbtconf.8
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 6, 2003
+.Dd December 31, 2019
 .Dt NEWBTCONF 8
 .Os
 .Sh NAME
@@ -104,7 +104,6 @@ pointing to
 /etc/fstab
 /etc/ifconfig.*
 /etc/inetd.conf
-/etc/mrouted.conf
 /etc/mygate
 /etc/myname
 /etc/netstart
@@ -217,7 +216,7 @@ Note that the previously created configurations (in
 .Pa /etc/etc.\*[Lt]name\*[Gt] )
 are not removed.
 .Sh FILES
-.Bl -tag -width /etc/mrouted.current -compact
+.Bl -tag -width ".Pa /etc/nsswitch.conf" -compact
 .It Pa /etc/etc.current
 Symbolic link to current config directory.
 .It Pa /etc/etc.default
@@ -229,7 +228,6 @@ These files all become symbolic links.
 .It Pa /etc/fstab
 .It Pa /etc/ifconfig.*
 .It Pa /etc/inetd.conf
-.It Pa /etc/mrouted.conf
 .It Pa /etc/mygate
 .It Pa /etc/myname
 .It Pa /etc/netstart
