world: Introduce NO_INITRD option.
 Sometimes it is useful to skip rebuilding initrd during development.

--- a/share/man/man5/make.conf.5
+++ b/share/man/man5/make.conf.5
@@ -405,6 +405,9 @@ Set to not build games.
 .Pq Vt bool
 Set to not build
 .Xr gdb 1
+.It Va NO_INITRD
+.Pq Vt bool
+Set to not build initrd image.
 .It Va NO_LPR
 .Pq Vt bool
 Set to not build
