--- a/lib/libc/stdlib/realpath.3
+++ b/lib/libc/stdlib/realpath.3
@@ -1,4 +1,4 @@
-.\" Copyright (c) 1994
+.\" Copyright (c) 1994, 2020
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
@@ -110,7 +110,8 @@ for any of the errors specified for the library functions
 and
 .Xr getcwd 3 .
 .Sh SEE ALSO
-.Xr getcwd 3
+.Xr getcwd 3 ,
+.Xr __realpath 2
 .\" .Sh STANDARDS
 .\" The
 .\" .Fn realpath
