getrandom.2: Comment out reference to getentropy.3 and fix date.

--- a/lib/libc/sys/getrandom.2
+++ b/lib/libc/sys/getrandom.2
@@ -23,7 +23,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd January 12, 2020
+.Dd February 1, 2020
 .Dt GETRANDOM 2
 .Os
 .Sh NAME
@@ -113,7 +113,7 @@ does not impose a limit on the buffer size.
 .El
 .Sh SEE ALSO
 .Xr arc4random 3 ,
-.Xr getentropy 3 ,
+.\".Xr getentropy 3 ,
 .Xr random 4
 .Sh STANDARDS
 .Fn getrandom
