rman.9: Fix rman_make_alignment_flags() prototype.

--- a/share/man/man9/rman.9
+++ b/share/man/man9/rman.9
@@ -114,7 +114,7 @@
 .\".Fa "u_long bound" "u_int flags" "device_t dev"
 .\".Fc
 .Ft uint32_t
-.Fn rman_make_alignment_flags "uint32_t size"
+.Fn rman_make_alignment_flags "size_t size"
 .Pp
 .Ft u_long
 .Fn rman_get_start "struct resource *r"
