hammer2.8: Fix typo.

--- a/sbin/hammer2/hammer2.8
+++ b/sbin/hammer2/hammer2.8
@@ -436,7 +436,7 @@ snapshots will not be able to snapshot the data against later changes
 made to the file, and de-duplication will no longer function on any
 data related to the file.
 However, you can still recover the most recent data from previously
-taken snapshots if you accidently remove the file.
+taken snapshots if you accidentally remove the file.
 .\" ==== clrcheck ====
 .It Cm clrcheck Op path...
 Clear the check code override for the specified paths.
