--- a/lib/libc/sys/flock.2
+++ b/lib/libc/sys/flock.2
@@ -28,7 +28,7 @@
 .\"     @(#)flock.2	8.2 (Berkeley) 12/11/93
 .\" $FreeBSD: src/lib/libc/sys/flock.2,v 1.8.2.8 2001/12/14 18:34:00 ru Exp $
 .\"
-.Dd December 11, 1993
+.Dd February 11, 2020
 .Dt FLOCK 2
 .Os
 .Sh NAME
@@ -37,11 +37,7 @@
 .Sh LIBRARY
 .Lb libc
 .Sh SYNOPSIS
-.In sys/file.h
-.Fd "#define   LOCK_SH        0x01      /* shared file lock */"
-.Fd "#define   LOCK_EX        0x02      /* exclusive file lock */"
-.Fd "#define   LOCK_NB        0x04      /* don't block when locking */"
-.Fd "#define   LOCK_UN        0x08      /* unlock file */"
+.In fcntl.h
 .Ft int
 .Fn flock "int fd" "int operation"
 .Sh DESCRIPTION
