Use our new partition id (0x6c) in several more places.
Mainly, adjust the USB img's own ID and use it in the installer's
legacy BIOS install.

While here, adjust DragonFly BSD's name in a few places (written with
a space).

Reported-by: zrj

--- a/sbin/fdisk/fdisk.8
+++ b/sbin/fdisk/fdisk.8
@@ -1,6 +1,6 @@
 .\" $FreeBSD: src/sbin/i386/fdisk/fdisk.8,v 1.17.2.11 2002/04/25 16:25:12 trhodes Exp $
 .\"
-.Dd March 27, 2019
+.Dd February 14, 2020
 .Dt FDISK 8
 .Os
 .Sh NAME
@@ -197,7 +197,7 @@ An example follows:
 	Warning: BIOS sector numbering starts with sector 1
 	Information from DOS bootblock is:
 	The data for partition 1 is:
-	sysid 165,(DragonFly/FreeBSD/NetBSD/386BSD)
+	sysid 108,(DragonFly BSD)
 	    start 495, size 380160 (185 Meg), flag 0
 		beg: cyl 1/ sector 1/ head 0;
 		end: cyl 768/ sector 33/ head 14
