--- a/usr.sbin/mtree/mtree.8
+++ b/usr.sbin/mtree/mtree.8
@@ -56,7 +56,7 @@
 .\"
 .\"     @(#)mtree.8	8.2 (Berkeley) 12/11/93
 .\"
-.Dd July 22, 2018
+.Dd February 15, 2020
 .Dt MTREE 8
 .Os
 .Sh NAME
@@ -710,7 +710,22 @@ option can be used in combination with
 .Fl U
 or
 .Fl u
-to create directory hierarchies for, for example, distributions.
+to create directory hierarchies for distributions.
+For example,
+.Pp
+.Dl mtree -deiU -f /etc/mtree/BSD.var.dist -p /var
+.Pp
+will create the
+.Dq var
+directory hierarchies at
+.Pa /var ;
+.Pp
+.Dl mtree -deiU -f /etc/mtree/BSD.include.dist -p /usr/include
+.Pp
+will create the
+.Dq include
+directory hierarchies at
+.Pa /usr/include .
 .Sh COMPATIBILITY
 The compatibility shims provided by the
 .Fl F
@@ -733,7 +748,9 @@ The related
 flag is a no-op rather than causing a warning to be printed and no
 keyword to be emitted.
 The latter behavior is not emulated as it is potentially dangerous in
-the face of /set statements.
+the face of
+.Ql /set
+statements.
 .Pp
 The
 .Sy netbsd6
