realpath.3: Sort SEE ALSO.

--- a/lib/libc/stdlib/realpath.3
+++ b/lib/libc/stdlib/realpath.3
@@ -110,8 +110,8 @@ for any of the errors specified for the library functions
 and
 .Xr getcwd 3 .
 .Sh SEE ALSO
-.Xr getcwd 3 ,
-.Xr __realpath 2
+.Xr __realpath 2 ,
+.Xr getcwd 3
 .\" .Sh STANDARDS
 .\" The
 .\" .Fn realpath
