--- a/share/man/man4/atkbdc.4
+++ b/share/man/man4/atkbdc.4
@@ -55,9 +55,6 @@ device configured in the system.
 The following kernel configuration options can be used to control the
 .Nm
 driver.
-They may be set in the kernel configuration file
-(see
-.Xr config 8 ) .
 .Bl -tag -width MOUSE
 .It Em KBD_RESETDELAY=X , KBD_MAXWAIT=Y
 The keyboard driver
@@ -98,8 +95,7 @@ The default value is zero, which suppresses all debugging output.
 .\".Sh BUGS
 .Sh SEE ALSO
 .Xr atkbd 4 ,
-.Xr psm 4 ,
-.Xr config 8
+.Xr psm 4
 .Sh HISTORY
 The
 .Nm
