--- a/share/man/man4/syscons.4
+++ b/share/man/man4/syscons.4
@@ -423,13 +423,7 @@ option too.
 The following driver flags can be used to control the
 .Nm
 driver.
-They can be set either in the kernel configuration file
-(see
-.Xr config 8 ) ,
-or else in the User Configuration Menu at boot
-time
-(see
-.Xr boot 8 ) .
+They can be set in the kernel configuration file.
 .Bl -tag -width bit_0
 .\".It bit 0 (VISUAL_BELL)
 .\"Uses the ``visual'' bell.
@@ -833,7 +827,6 @@ input queue - usually 1024 bytes
 .Xr kbdmap 5 ,
 .Xr rc.conf 5 ,
 .Xr ttys 5 ,
-.Xr config 8 ,
 .Xr getty 8 ,
 .Xr kldload 8 ,
 .Xr moused 8
