--- a/share/man/man4/tpm.4
+++ b/share/man/man4/tpm.4
@@ -73,9 +73,8 @@ Winbond WEC WPCT200
 .\"interrupt vector in
 .\".Pa /boot/device.hints .
 .Sh SEE ALSO
-.Xr intro 4 ,
-.\".Xr device.hints 5 ,
-.Xr config 8
+.Xr intro 4
+.\".Xr device.hints 5
 .Sh AUTHORS
 .An -nosplit
 The
