--- a/share/man/man7/tuning.7
+++ b/share/man/man7/tuning.7
@@ -580,7 +580,7 @@ a large-scale system.
 In order to change these options you need to be
 able to compile a new kernel from source.
 The
-.Xr config 8
+.Xr build 7
 manual page and the handbook are good starting points for learning how to
 do this.
 Generally speaking, removing options to trim the size of the kernel
@@ -696,11 +696,11 @@ shared memory configuration as you will be wiring the memory.
 .Xr pf.conf 5 ,
 .Xr rc.conf 5 ,
 .Xr sysctl.conf 5 ,
+.Xr build 7 ,
 .Xr firewall 7 ,
 .Xr hier 7 ,
 .Xr boot 8 ,
 .Xr ccdconfig 8 ,
-.Xr config 8 ,
 .Xr disklabel 8 ,
 .Xr fsck 8 ,
 .Xr ifconfig 8 ,
