--- a/share/man/man4/ukbd.4
+++ b/share/man/man4/ukbd.4
@@ -150,8 +150,7 @@ driver to the kernel.
 .Xr ohci 4 ,
 .Xr syscons 4 ,
 .Xr uhci 4 ,
-.Xr usb 4 ,
-.Xr config 8
+.Xr usb 4
 .Sh AUTHORS
 .An -nosplit
 The
